Use Class.getConstructor().newInstance() instead of Class.newInstance() to trap errors thrown by ctor.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@3927 67b53d14-2c14-4ace-a08f-0dab2b34000c